[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "articlepub"
version = "0.1.2"
description = "Turn article URLs into Kindle-friendly EPUBs and optionally upload them to Calibre-Web."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Farhad" }]
dependencies = []

[project.scripts]
articlepub = "articlepub.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/articlepub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
